tests/neg/i2642.scala
object Foo {
  type X = implicit () => Int // error: implicit function needs parameters
  def ff: X = () // error: found: Unit, expected: X
}
